# relational-closure-carrier

./: .gitignore  ABSTRACT.md  ABSTRACT_RU.md  EVIDENCE.md  MEMORY.md  README.md  REPRODUCE.md  TECHNICAL_ABSTRACT.md  TECHNICAL_ABSTRACT_RU.md  growth_carrier.py  index.html  pyproject.toml  run_growth.py  run_world_lineage.py  world_lineage.py
results/: public_audit.json
ru/: index.html
scripts/: build_public_abstract.sh  build_public_theory.sh  refresh_public_audit.py
tests/: test_growth.py  test_world_lineage.py
theory/: atlas.css  atlas.html  package-lock.json  package.json  print-atlas.mjs  source-brief.md
theory/illustrations/: README.md
